--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/netinfo": "^9.3.0",
+    "@react-native-picker/picker": "^2.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "aws-amplify": "^4.3.30",
+    "aws-amplify-react-native": "^6.0.5",
     "expo": "~45.0.0",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
