--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-native-picker/picker": "^2.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
-    "aws-amplify": "^4.3.30",
+    "aws-amplify": "4.3.24",
     "aws-amplify-react-native": "^6.0.5",
     "expo": "~45.0.0",
     "expo-location": "~14.2.2",
